Added about the author section

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -26,7 +26,11 @@
       / Application Javascript, safe to override
       = javascript_include_tag "app"
       %aside.four.columns
-
+        .panel
+          %h4
+            About the author
+          %p
+            Scott Skender is learning disciplined web development at gSchool Boulder, a full-time software school. You'll see him programming in Ruby on the bus to & from Denver.
         - if paginate
           .panel
             %p
