--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -18,7 +18,7 @@
     .row
       .twelve.columns
         %h2
-          %a{href: "/"}= data.site.title
+          %a{href: "/blog"}= data.site.title
         %hr
     .row
       .eight.columns
