--- a/source/stylesheets/theme.css.scss
+++ b/source/stylesheets/theme.css.scss
@@ -1,15 +1,18 @@
+@import 'variables';
+
 body {
+  width: 100%;
   background: #eeeeee;
-  font-family: "Lustria", "Helvetica Neue", "HelveticaNeue", Helvetica, sans-serif;
+  font-family: "PT Mono", Helvetica, sans-serif;
   font-size: 14px;
   line-height: 18px;
   color: #222222;
 }
 a {
-  color: #2f84c2;
+  color: $link-color;
 }
 a:hover {
-  color: #2a76ad;
+  color: #755213;
 }
 header {
   padding: 3em 0px 3em 0px;
@@ -48,7 +51,7 @@ h6,
 .top-nav,
 .nav-bar,
 .sub-nav {
-  font-family: 'PT Sans', sans-serif;
+  font-family: 'Oswald', sans-serif;
 }
 .bottom-border {
   border-bottom: 4px solid #a2a2a2;
@@ -130,7 +133,7 @@ div.panel {
   border: 1px solid #226826;
 }
 dl.sub-nav dd.active a {
-  background: #2f84c2;
+  background: $accent-color;
   color: #fff;
   padding: 3px 9px;
 }
