--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -80,10 +80,9 @@ per_page: 10
         Projects
       .panel
         %a{href: "http://langua.herokuapp.com"}='Langua'
-        Learn Portuguese!
         %a{href: "https://github.com/vandosant/language-app", style: "font-size:50%"}='(GitHub Repo)'
       .panel
-        %a{href: "http://fast-brook-6884.herokuapp.com", style: "font-size:50%"}='Game of Life'
+        %a{href: "http://fast-brook-6884.herokuapp.com"}='Game of Life'
         %a{href: "https://github.com/vandosant/game-of-life", style: "font-size:50%"}='(GitHub Repo)'
       .panel
         more to come, don't worry...
