--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -82,7 +82,7 @@ per_page: 10
         %a{href: "http://langua.herokuapp.com"}='Langua'
         %a{href: "https://github.com/vandosant/language-app", style: "font-size:50%"}='(GitHub Repo)'
       .panel
-        %a{href: "http://fast-brook-6884.herokuapp.com"}='Game of Life'
+        %a{href: "http://gameoflife.scottskender.com"}='Game of Life'
         %a{href: "https://github.com/vandosant/game-of-life", style: "font-size:50%"}='(GitHub Repo)'
       .panel
         more to come, don't worry...
