--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -101,6 +101,9 @@ per_page: 10
       %a{href: "https://www.linkedin.com/in/scottskender"}
         .panel
           LinkedIn
+      %a{href: "mailto:sjskender@gmail.com"}
+        .panel
+          Email
 
 .row
   .six.columns
