Added web synthesizer project listing

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -85,7 +85,8 @@ per_page: 10
         %a{href: "http://gameoflife.scottskender.com"}='Game of Life'
         %a{href: "https://github.com/vandosant/game-of-life", style: "font-size:50%"}='(GitHub Repo)'
       .panel
-        more to come, don't worry...
+        %a{href: "http://gameoflife.scottskender.com"}='Scribble'
+        %a{href: "https://github.com/vandosant/web-synthesizer", style: "font-size:50%"}='(GitHub Repo)'
 
 %section.mural.contact
   .row
