--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -3,6 +3,8 @@ title: Scott Skender - Full Stack Ruby on Rails Web Developer
 pageable: true
 per_page: 10
 ---
+%meta{name:"viewport", content:"initial-scale=1.0",width:"device-width"}
+
 %section.mural
   %section.text
     %h2
@@ -19,49 +21,47 @@ per_page: 10
       %li
         Rails
       %li
-        TDD
-      %li
         Sinatra
       %li
         PostgreSQL
       %li
-        ERB
+        MySQL
       %li
-        HAML
+        MongoDB
     %ol.middle
-      %li
-        Conversions
-      %li
-        Optimization
-      %li
-        A/B Testing
-      %li
-        AdWords
-      %li
-        Retargeting
-      %li
-        Display
-      %li
-        Analytics
-    %ol.right
       %li
         JavaScript
       %li
         JQuery
       %li
-        JSON
+        CoffeeScript
       %li
-        UJS
+        Jasmine
       %li
-        AJAX
+        Protractor
+      %li
+        Express
+      %li
+        AngularJS
+      %li
+        MEAN
+    %ol.right
       %li
         CSS
       %li
         SCSS
       %li
-        Middleman
-      %li
         HTML
+      %li
+        ERB
+      %li
+        HAML
+      %li
+        SLIM
+      %li
+        JSON
+      %li
+        XML
 
 %section.mural.blogroll
   .row
