--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -84,6 +84,9 @@ per_page: 10
       .panel
         %a{href: "http://langua.herokuapp.com"}='Langua'
         %a{href: "https://github.com/vandosant/language-app", style: "font-size:50%"}='(GitHub Repo)'
+      .panel
+        %a{href: "http://gameoflife.scottskender.com"}='Game of Life'
+        %a{href: "https://github.com/vandosant/game-of-life", style: "font-size:50%"}='(GitHub Repo)'
 
 %section.mural.contact
   .row
