--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,58 @@
 * {
-  box-sizing: border-box;;
+  box-sizing: border-box;
 }
 
 html {
-  font-family: Helvetica Neue, Helvetica, sans-serif;
+  font-family: 'Oswald', sans-serif;
+  text-rendering: optimizeLegibility;
 }
 
-h1 {
-  color: papayawhip;
+.mural {
+  margin: 0;
+  padding: 10% 0;
+  display: block;
+  position: relative;
+  width: 100%;
+  background-color: #0d0d0d;
+  height: 880px;
+}
+
+.text {
+  position: relative;
+  width: 80%;
+  margin: 0 auto;
+  letter-spacing: 5px;
+}
+
+.text-hero {
+  position: absolute;
+  top: 30%;
+  color: #222222;
+  font-size: 15em;
+  text-transform: uppercase;
+  margin: 0;
+  line-height: 1em;
+  opacity: .75;
+}
+
+.text-hero-list {
+  list-style-type: none;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  vertical-align: top;
+  color: #f2e088;
+  font-size: 14px;
+  opacity: .5;
+  line-height: 3.3em;
+}
+
+.text-hero-list-center {
+  margin-left: 12em;
+  opacity: .3;
+}
+
+.text-hero-list-right {
+  margin-left: 6em;
+  opacity: .2;
 }
