--- a/client/views/index.html
+++ b/client/views/index.html
@@ -45,7 +45,10 @@
   </section>
   <section class='mural mural-orange'>
     <div class='row'>
-      <div id="app"></div>
+      <script>
+        window.__PRELOADED_STATE__ = ${JSON.stringify(preloadedState)}
+      </script>
+      <div id="app"><%= body %></div>
     </div>
   </section>
   <section class='mural mural-blue'>
